--- a/src/Makefile-LIBADD.inc
+++ b/src/Makefile-LIBADD.inc
@@ -1,5 +1,5 @@
-include $(top_srcdir)/ezfork/src/Makefile-LIBADD.inc
-include $(top_srcdir)/restart/src/Makefile-LIBADD.inc
+include ../../ezfork/src/Makefile-LIBADD.inc
+include ../../restart/src/Makefile-LIBADD.inc
 #include ../ezfork/src/Makefile-LIBADD.inc
 #include ../restart/src/Makefile-LIBADD.inc
 
