--- a/configure.ac
+++ b/configure.ac
@@ -8,24 +8,26 @@ AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_FILES([
  Makefile
  src/Makefile
+ src/libsfork.pc
 ])
+
+PKG_PROG_PKG_CONFIG
 
 AC_ARG_ENABLE([use-submodules],
     AS_HELP_STRING([--enable-use-submodules], [Enable use submodules]))
 AM_CONDITIONAL([USE_SUBMODULES], [test x"$enable_use_submodules" = "xyes"])
 
 AC_CONFIG_MACRO_DIR([m4])
-#AC_CONFIG_SUBDIRS([glitter])
 
 AC_CHECK_HEADERS([stdlib.h unistd.h sys/types.h])
-AC_CHECK_HEADERS([glitter.h ezfork.h restart.h])
+#AC_CHECK_HEADERS([glitter.h ezfork.h restart.h])
 
-AC_CHECK_LIB([stdlib],[fork],[ezfork],[restart])
+#AC_CHECK_LIB([stdlib],[fork],[ezfork],[restart])
+AC_CHECK_LIB([stdlib],[fork])
 
-#srcdir = @srcdir@
-#LIBSFORK_LIBADD="`PATH=$(srcdir)src:$PATH libsfork_config --libs`"
-LIBSFORK_LIBADD="`PATH=src:$PATH libsfork_config --libs`"
-AC_SUBST(LIBSFORK_LIBADD)
+PKG_CHECK_MODULES([GLITTER],[glitter],,)
+PKG_CHECK_MODULES([RESTART],[librestart],,)
+PKG_CHECK_MODULES([EZFORK],[libezfork],,)
 
 INNOVANON_WARNINGS([])
 
